# TestetecnicoM-liuz

./: .gitignore  README.md  analyze.py  pyproject.toml
data/processed/: ab_tests_tracking.csv
integrations/: google_apps_script_webhook.gs
prompts/: analisar_teste_ab.md
reports/: relatorio_consolidado.html  relatorio_consolidado.md  relatorio_parceiro_a.html  relatorio_parceiro_a.md  relatorio_parceiro_b.html  relatorio_parceiro_b.md  relatorio_parceiro_c.html  relatorio_parceiro_c.md
src/growth_ab_analyzer/: analysis.py  cli.py  google_sheets.py  loader.py  models.py  parsing.py  reporting.py
tests/: test_analysis.py  test_parsing.py
